# Audio-RAG-QA

./: .env.example  README.md  pyproject.toml  rag.py  rag_practice.py
